--- a/contact.Rmd
+++ b/contact.Rmd
@@ -9,5 +9,5 @@ knitr::opts_chunk$set(echo = FALSE)
 
 If you have any questions about my research, something I've written on the blog, how to access full text of articles, or collaborating, please shoot me an email:
 
-ben.goldstein@berkeley.edu
+bgoldst2@ncsu.edu
 
