--- a/_SDMs/2022-03-17-part-2-extending-the-occupancy-model-with-nimbleecology-maximum-likelihood-estimation/part-2-extending-the-occupancy-model-with-nimbleecology-maximum-likelihood-estimation.Rmd
+++ b/_SDMs/2022-03-17-part-2-extending-the-occupancy-model-with-nimbleecology-maximum-likelihood-estimation/part-2-extending-the-occupancy-model-with-nimbleecology-maximum-likelihood-estimation.Rmd
@@ -15,10 +15,6 @@ draft: true
 knitr::opts_chunk$set(echo = FALSE)
 ```
 
-Distill is a publication format for scientific and technical writing, native to the web.
-
-Learn more about using Distill at <https://rstudio.github.io/distill>.
-
 # In this post...
 
 I take a different approach to occupancy model estimation, showing an alternate
@@ -28,7 +24,8 @@ I assume that you've read my earlier post, [Intro to nimbleEcology:
 Marginalization and the occupancy
 model](https://dochvam.github.io/SDMs/2022-01-31-intro-to-nimbleecology-site-occupancy-models/).
 
-This post is short, and is meant more to provide example code than to
-offer in-depth explanations of these concepts. It's the second in a three-part
-series on some basic ways to do more with the occupancy model.
+This post is short and is meant more to provide example. It's the second in a three-part
+series on some basic ways to do more with NIMBLE for occupancy models.
+
+
 
