--- a/contact.Rmd
+++ b/contact.Rmd
@@ -7,7 +7,7 @@ output: distill::distill_article
 knitr::opts_chunk$set(echo = FALSE)
 ```
 
-If you have any questions about my research, something I've written on the blog, how to access full text of articles, or collaborating, please shoot me an email:
+If you have any questions about my research, how to access full text of articles, or collaborating, please shoot me an email:
 
 bgoldst2@ncsu.edu
 
